# cmake-starter

./: .appveyor.yml  .gitignore  .travis.yml  .travis.yml.1  CMakeLists.txt  README.md  conanfile.txt
src/: MainWindow.cpp  MainWindow.ui  main.cpp
